--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Total Body Gym</title>
   </head>
-  <body style="background-color: grey;">
+  <body style="background-color: #4a4a4a;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
